Remake MarkdownStorageTest